<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saha.nightmode.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/layout_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/red"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sb_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_red" />

            <TextView
                android:id="@+id/val_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="50%"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/tv_red"
                android:layout_toEndOf="@+id/tv_red" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blue"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sb_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_blue"/>

            <TextView
                android:id="@+id/val_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="50%"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/tv_blue"
                android:layout_toEndOf="@+id/tv_blue" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/green"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sb_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_green" />

            <TextView
                android:id="@+id/val_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="50%"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/tv_green"
                android:layout_toEndOf="@+id/tv_green" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/alpha"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sb_alpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_alpha" />

            <TextView
                android:id="@+id/val_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="50%"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/tv_alpha"
                android:layout_toEndOf="@+id/tv_alpha" />
        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start"
        android:textAllCaps="true" />
</RelativeLayout>
